--- a/pages/scaryMovies.html
+++ b/pages/scaryMovies.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Halloween Page - Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>My Halloween Page - Scary Movies</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <h1>My Halloween Website</h1>
+        <h1>Scary Movies</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pages/scaryMovies.html">Scary Movies</a></li>
-                <li><a href="pages/recipes.html">Recipes</a></li>
-                <li><a href="pages/games.html">Games</a></li>
+                <li><a href="../index.html">Home</a></li>  
+                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="games.html">Games</a></li>
             </ul>
         </nav>
     </header>
