--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Recipes</h1>
+        <h1>Halloween Recipes</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -19,8 +19,35 @@
     </header>
     
     <main>
-        <h2></h2>
-        <p></p>
+        <h2>Spooky Treats to Delight Your Guests</h2>
+        <p>Get ready for Halloween with these delicious and spooky recipes that will impress your friends and family!</p>
+        <ul>
+            <li>
+                <strong>Witch's Brew Punch</strong> - A fun, fizzy drink perfect for any Halloween party.
+                <br><a href="https://ameessavorydish.com/bubbly-witches-brew/#recipe" target="_blank">View Recipe</a>
+                <br><img style="width:200;height:150px;"src="../images/recipe1pic.jpg.jpg" alt="Witch's Brew Punch" />
+            </li>
+            <li>
+                <strong>Monster Munch Popcorn</strong> - Sweet and salty popcorn mix with spooky candies.
+                <br><a href="https://example.com/monster-munch" target="_blank">View Recipe</a>
+                <br><img src="../images/recipe1pic.jpg" alt="Monster Munch Popcorn" />
+            </li>
+            <li>
+                <strong>Pumpkin Cupcakes</strong> - Delicious pumpkin-flavored cupcakes with cream cheese frosting.
+                <br><a href="https://example.com/pumpkin-cupcakes" target="_blank">View Recipe</a>
+                <br><img src="path/to/pumpkin-cupcakes.jpg" alt="Pumpkin Cupcakes" />
+            </li>
+            <li>
+                <strong>Ghostly Cheesecake Bites</strong> - Mini cheesecakes decorated to look like ghosts.
+                <br><a href="https://example.com/ghostly-cheesecake" target="_blank">View Recipe</a>
+                <br><img src="path/to/ghostly-cheesecake.jpg" alt="Ghostly Cheesecake Bites" />
+            </li>
+            <li>
+                <strong>Spider Deviled Eggs</strong> - Classic deviled eggs made spooky with olive "spiders."
+                <br><a href="https://example.com/spider-deviled-eggs" target="_blank">View Recipe</a>
+                <br><img src="path/to/spider-deviled-eggs.jpg" alt="Spider Deviled Eggs" />
+            </li>
+        </ul>
     </main>
     
     <footer>
