--- a/pages/scaryMovies.html
+++ b/pages/scaryMovies.html
@@ -19,8 +19,24 @@
     </header>
     
     <main>
-        <h2></h2>
-        <p></p>
+        <h2>Top 5 Scary Movies to Watch This Halloween</h2>
+        <p>If you’re looking for a fright this Halloween, here are five must-watch scary movies:</p>
+        <ul>
+            <li><strong>The Exorcist</strong> - A classic tale of demonic possession.</li>
+            <li><strong>Halloween</strong> - The original slasher film that started it all.</li>
+            <li><strong>Get Out</strong> - A psychological thriller that will keep you on the edge of your seat.</li>
+            <li><strong>Hereditary</strong> - A modern horror film that explores family secrets.</li>
+            <li><strong>The Conjuring</strong> - Based on true events, it's a spine-chilling ghost story.</li>
+        </ul>
+
+        <h3>Movie Posters</h3>
+        <div class="image-gallery">
+            <img src="../images/download.jpg" alt+="The Exorcist Poster">
+            <img src="../images/download1.jpg" alt="Halloween Poster" />
+            <img src="../images/download2.jpg" alt="Get Out Poster" />
+            <img src="../images/download3.jpg" alt="Hereditary Poster" />
+            <img src="../images/download4.jpg" alt="The Conjuring Poster" />
+        </div>
     </main>
     
     <footer>
